# UGV_WS

./: .gitignore  .gitignore~  Dockerfile  README.md  docker-compose.yml  docker_build  docker_create  docker_destroy  docker_setup  src.tar.xz  webots_remote_node.py
ros2_ws/: frames_2026-02-04_06.51.01.gv
ros2_ws/install/autonomous_navigation/share/autonomous_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/sensor_fusion/lib/sensor_fusion/: data_viz.py  slippage_generator.py
ros2_ws/install/sensor_fusion/share/sensor_fusion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/virtual_odom/lib/virtual_odom/: lidar_odom_node.py
ros2_ws/install/virtual_odom/share/virtual_odom/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/webots_platform/lib/webots_platform/: odom_debugger.py  spawn_proto_robot.py  ugv_controller.py
ros2_ws/install/webots_platform/share/webots_platform/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ugv_driver.xml
ros2_ws/log/: latest_build
ros2_ws/src/: webots_platform_for_debug.tar  webots_platform_issue.tar
ros2_ws/src/autonomous_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/autonomous_navigation/config/: nav2.yaml
ros2_ws/src/autonomous_navigation/launch/: rtabmap_localization.launch.py  rtabmap_mapping.launch.py  rtabmap_mapping_bkpup
ros2_ws/src/sensor_fusion/: CMakeLists.txt
ros2_ws/src/sensor_fusion/launch/: ekf_test.launch.py
ros2_ws/src/sensor_fusion/params/: ekf_params.yaml
ros2_ws/src/sensor_fusion/scripts/: data_viz.py  slippage_generator.py
ros2_ws/src/virtual_odom/: CMakeLists.txt  CODE_EXPLANATION.md  package.xml
ros2_ws/src/virtual_odom/scripts/: lidar_odom_node.py
ros2_ws/src/webots_platform/: CMakeLists.txt  ugv_driver.xml
ros2_ws/src/webots_platform/config/: Robot.urdf  Rosbot.urdf  UGV.urdf  ugv.urdf  ugv_mod.urdf  ugv_mode.urdf
ros2_ws/src/webots_platform/include/webots_platform/: UGV_Driver.hpp
ros2_ws/src/webots_platform/launch/: robot_simulation.launch.py  ugv_description.launch.py  world_simulation.launch.py
ros2_ws/src/webots_platform/protos/: UGV.proto
ros2_ws/src/webots_platform/rviz/: webot_viz.rviz
ros2_ws/src/webots_platform/scripts/: odom_debugger.py  rosbot_driver copy.py  rosbot_driver.py  spawn_proto_robot.py  ugv_controller.py  ugv_controller_node.py  ugv_controller_test.py
ros2_ws/src/webots_platform/src/: UGV_Driver.cpp
ros2_ws/src/webots_platform/worlds/: .test.wbproj  .ugv_world.wbproj  robot.wbt  test.wbt  ugv_it_office.wbt  ugv_world.wbt  ugv_world_it.wbt  ugv_world_updated.wbt
ros2_ws/tf2_frames/: frames_2026-02-03_10.28.35.gv  frames_2026-02-03_10.49.38.gv
(+56 files in other folders)
